Istio/Calculator/processor/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: processor
  namespace: <PROJECT>
  labels:
    app: processor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: processor    
  template:
    metadata:
      labels:
        app: processor         
    spec:
      containers:
      - image: <CONTAINER>
        name: processor-container
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-server
      imagePullSecrets:
      - name: bluemix-calculator-secret
