Istio/Calculator/processor/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: processor
  namespace: <PROJECT>
  labels:
    app: processor
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: processor
