Istio/Calculator/processor/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-processor
  namespace: calculator 
spec:
  podSelector:
    matchLabels:
      app: processor
  ingress:
  - ports:
    - port: 80   
    from: []
